# pdaqp-solver-chisel

./: .gitignore  .scalafix.conf  .scalafmt.conf  README.md  build.mill  meson.build
pdaqp_design/mock-tests/: meson.build
pdaqp_design/src/: Constants.scala  DotLEqOffsetSInt16.scala  GenVerilogTop.scala  GenVerilogTreeWalkMocked.scala  MatMultiplyAddSInt16.scala  Pack.scala  PdaqpGPIO.scala  Top.scala  TreeWalk.scala  TreeWalkTestTop.scala  Unpack.scala  meson.build
scripts/: meson.build  run_at_current_build_dir.sh  run_at_src_root.sh
subprojects/: pdaqp-solver-cpp.wrap  synlig.wrap
subprojects/mill-build-system/: meson.build
subprojects/packagefiles/synlig/: meson.build
synthesis/: meson.build  synth.ys.in
tests/dot_product/: meson.build  test-dot-leq.cpp
tests/hello_world/: meson.build  test-runner.cpp
tests/matmul_add/: meson.build  test-matmul-add.cpp  test-zero-param.cpp
tests/tree_walk/: meson.build  test-tree-walk-sml.cpp
